2022-11-02  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): pass
        argument "type" on to "lines"

2022-10-13  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): add parameters
        'streaks.up.labels.cex' and 'streaks.down.labels.cex'

2022-09-20  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries.default): check
        whether "series.type" is supported

2022-08-02  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Suggests): add 'bundesbank'

2022-06-29  Enrico Schumann  <es@enricoschumann.net>

        * .Rbuildignore: add file, ignore README

2022-05-29  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        'streaks.relative', with default TRUE, to
        support argument 'relative' of PMwR::streaks

2022-03-17  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add arguments
        'streaks.up.labels.col' and 'streaks.down.labels.col'

2022-01-27  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (last.format): add rudimentary
        support for numeric t, such as  integers 1, 2, ...

2021-12-03  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        'labels.at.offset'

2021-11-26  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add
        argument 'last.format', which is either NULL or
        a function to be called on the 'last' part of
        the label

2021-11-25  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add
        argument 'type'

2021-11-23  Enrico Schumann  <es@enricoschumann.net>

        * R/plotseries.R (plotseries): add argument
        'do.scale1', with default to TRUE, for
        optionally switching off scaling

        * R/plotseries.R (plotseries): support 'lwd'
        with length > 1
