@@ -1,3 +1,8 @@
+2022-11-23  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/plotseries.R (plotseries.default):
+        experimental support for zoo::yearmon
+
 2022-11-02  Enrico Schumann  <es@enricoschumann.net>
 
         * R/plotseries.R (plotseries.default): pass
